Fix StoreAge7